<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView
    android:id="@+id/btn_skip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/skip"
    android:textColor="@color/txt_color"
    android:layout_marginRight="@dimen/padding_normal_8"
    android:layout_marginTop="@dimen/padding_normal_8"
    android:layout_alignParentRight="true"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_skip"
            android:layout_marginTop="@dimen/padding_xxlarge_30"
            android:src="@drawable/app_logo"/>
        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:layout_marginRight="@dimen/padding_xxlarge_30"
            android:layout_marginLeft="@dimen/padding_xxlarge_30"
            android:layout_marginTop="@dimen/padding_xlarge_20"
            android:hint="@string/mobile_no"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobile_no"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:layout_marginRight="@dimen/padding_xxlarge_30"
            android:layout_marginLeft="@dimen/padding_xxlarge_30"
            android:layout_marginTop="@dimen/padding_xlarge_20"
            android:hint="@string/password"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:text="@string/login"
            android:background="@drawable/rounded_login"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/padding_xxlarge_30"
            android:layout_marginLeft="@dimen/padding_xxlarge_30"
            android:layout_marginTop="@dimen/padding_xlarge_20"
            android:gravity="center"/>
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium_10"
            android:layout_alignParentRight="true"
            android:textColor="@color/green_light"
            android:layout_marginRight="@dimen/padding_xlarge_20"
            android:layout_marginBottom="@dimen/padding_xlarge_20"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"
            android:layout_below="@+id/login"/>
        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                       android:layout_marginTop="@dimen/padding_xxlarge_30"
            android:layout_marginBottom="@dimen/padding_xlarge_20"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:layout_below="@+id/login"/>
        <LinearLayout
            android:id="@+id/layout_signup_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_xxlarge_30">
        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="@color/txt_color"
            android:layout_marginRight="@dimen/padding_small_5"
            />

        <TextView
            android:id="@+id/signup_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_here"
            android:textColor="@color/colorAccent"

           />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>