<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_exlarge_15"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_50"
        android:text="@string/create_new_password"  />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5"
        android:layout_marginRight="@dimen/padding_xxlarge_30"
        android:layout_marginLeft="@dimen/padding_xxlarge_30"
        android:layout_marginTop="@dimen/padding_xlarge_20"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5"
        android:layout_marginRight="@dimen/padding_xxlarge_30"
        android:layout_marginLeft="@dimen/padding_xxlarge_30"
        android:layout_marginTop="@dimen/padding_xlarge_20"
        android:hint="@string/retype_password"/>
    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retype_password"
        android:text="@string/submit"
        android:background="@drawable/rounded_login"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/padding_xxlarge_30"
        android:layout_marginLeft="@dimen/padding_xxlarge_30"
        android:layout_marginTop="@dimen/padding_xxlarge_30"
        android:gravity="center"/>


</LinearLayout>