<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_50"
            android:src="@drawable/app_logo"
            />
        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:paddingLeft="@dimen/padding_small_5"
            android:inputType="phone"
            android:paddingTop="@dimen/padding_small_5"
            android:layout_marginRight="@dimen/padding_xxlarge_30"
            android:layout_marginLeft="@dimen/padding_xxlarge_30"
            android:layout_marginTop="@dimen/padding_xlarge_20"
            android:hint="@string/mobile_no"/>

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobile_no"
            android:text="@string/submit"
            android:background="@drawable/rounded_login"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/padding_xxlarge_30"
            android:layout_marginLeft="@dimen/padding_xxlarge_30"
            android:layout_marginTop="@dimen/padding_xlarge_20"
            android:gravity="center"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xxlarge_30"
            android:layout_marginBottom="@dimen/padding_xlarge_20"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:layout_below="@+id/submit"/>
        <LinearLayout
            android:id="@+id/layout_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_xxlarge_30">
            <TextView
                android:id="@+id/already_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_member"
                android:textColor="@color/txt_color"
                android:layout_marginRight="@dimen/padding_small_5"
                />

            <TextView
                android:id="@+id/signin_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_here"
                android:textColor="@color/colorAccent"

                />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>