<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_exlarge_15"
            android:textStyle="bold"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_50"
            android:text="@string/otp_sent"

            />
    <EditText
        android:id="@+id/otp_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:paddingLeft="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5"
        android:layout_marginRight="@dimen/padding_xxlarge_30"
        android:layout_marginLeft="@dimen/padding_xxlarge_30"
        android:layout_marginTop="@dimen/padding_xlarge_20"
        android:hint="@string/otp"/>

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_value"
        android:text="@string/submit"
        android:background="@drawable/rounded_login"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/padding_xxlarge_30"
        android:layout_marginLeft="@dimen/padding_xxlarge_30"
        android:layout_marginTop="@dimen/padding_xlarge_20"
        android:gravity="center"/>
        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:text="@string/resend_otp"
            android:textSize="@dimen/txt_exlarge_15"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="@dimen/padding_xxlarge_30"
            android:layout_marginLeft="@dimen/padding_xxlarge_30"
            android:layout_marginTop="@dimen/padding_50"
            android:gravity="center"/>

    </RelativeLayout>
</ScrollView>