<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:id="@+id/toolBar"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                app:popupTheme="@style/AppTheme.PopupOverlay">


            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_small_5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_arrivals"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/padding_medium_10"
                android:paddingTop="@dimen/padding_small_5"
                android:paddingBottom="@dimen/padding_small_5"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_newArri"
                android:scrollbars="none">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_small_5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_selling"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/padding_medium_10"
                android:paddingTop="@dimen/padding_small_5"
                android:paddingBottom="@dimen/padding_small_5"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:id="@+id/recycler_bestSell">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_small_5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/padding_medium_10"
                android:paddingTop="@dimen/padding_small_5"
                android:paddingBottom="@dimen/padding_small_5"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_trend"
                android:scrollbars="none">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_small_5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditional"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/padding_medium_10"
                android:paddingTop="@dimen/padding_small_5"
                android:paddingBottom="@dimen/padding_small_5"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_conditional"
                android:scrollbars="none">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


    </LinearLayout>



</ScrollView>






    </android.support.design.widget.CoordinatorLayout>



    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:visibility="visible"
        android:id="@+id/navi_view"
        app:headerLayout="@layout/navi_header_layout"
        app:menu="@menu/navi_home_menu">



    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>